# Petsc_tutorial

./: .gitignore  CMakeLists.txt  Laplacian2D.cpp  Mat2.cpp  README.md  dmda.cpp  jobSlurm.sh  mat1.cpp  mat1_matSetValues.cpp  test1.cpp  vec1.cpp  vec2.cpp  vec2_slow.cpp  vec2_superSlow.cpp
